<resources>
    <string name="app_name">NeerByTo</string>

    <string name="app_title">가치가치</string>
    <string name="app_subtitle">share things, share one\'s heart</string>

    <!-- 로그인 & 회원가입 -->
    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="passwd">비밀번호</string>
    <string name="id_hint">xxxx@example.com</string>
    <string name="passwd_hint">비밀번호를 입력하세요</string>
    <string name="singup_passwd_hint">숫자와 영문을 섞어 8~15자리를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="find_user">아이디/비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="look_around">둘러보기</string>
    <string name="passwd_check">비밀번호 확인</string>
    <string name="nicname">닉네임</string>
    <string name="nicname_hint">닉네임을 입력해주세요.</string>
    <string name="phon">핸드폰 번호</string>
    <string name="id_ok">사용 가능한 아이디입니다</string>
    <string name="id_no">사용 불가능한 아이디입니다</string>
    <string name="nicname_ok">사용 가능한 닉네임입니다</string>
    <string name="nicname_no">사용 불가능한 닉네임입니다</string>

    <string name="login_by_api">간편하게 로그인</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_passwd">비밀번호 찾기</string>

    <string name="find_location_hint">내 동네 이름(읍면동) 으로 검색하기</string>
    <string name="find_location_btn">현재위치 찾기</string>
    <string name="find_location_helper">당신의 위치를 확인해주세요</string>

    <string name="view_cnt"> | 조회수 </string>
    <string name="pick"> | 관심 </string>
    <string name="hang_out">모집인원</string>
    <string name="hang_out_date">약속 날짜</string>
    <string name="hang_out_time">약속 시간</string>
    <string name="hang_out_spot">약속 장소</string>

    <string name="market">장보기</string>
    <string name="join">참여하기</string>
    <string name="join_date">가입</string>
    <string name="logout">로그아웃</string>
    <string name="write">작성글</string>
    <string name="enter">참여 한 글</string>
    <string name="like">관심</string>

    <string name="share">공유</string>
    <string name="report">신고</string>

    <string name="search">검색</string>
    <string name="category">카테고리</string>

    <string name="report_btn">신고하기</string>
    <string name="report_text">사용자의 신고사유를 작성해주세요</string>
    <string name="report_text_warning">허위 신고는 불이익을 받을 수 있습니다</string>

    <string name="notice">공지사항</string>
    <string name="fna">자주 묻는 질문</string>
    <string name="setting">앱 설정</string>

    <string name="myzone">마이 존</string>
    <string name="profile">프로필</string>
    <string name="profile_update">프로필 수정</string>
    <string name="manner_btn">매너평가</string>
    <string name="get_manner_btn">받은 매너평가</string>
    <string name="passwd_change">비밀번호 변경</string>
    <string name="profile_change">회원정보 수정</string>
    <string name="insert">등록</string>

    <string name="title">제목</string>
    <string name="ori_price">\￦ 원가</string>
    <string name="hangout_cnt">모집 인원 \(최대 4명\)</string>
    <string name="content">내용을 입력하세요</string>
    <string name="select_stop">선택한 약속 장소 표시</string>
    <string name="price_hint">원가와 모집인원을 입력하면 인당 지불 급액은 자동 계산됩니다</string>
    <string name="to_write">글쓰기</string>

    <string name="manner_detail">매너 상세</string>

    <string name="alarm">알림</string>
    <string name="service_terms">서비스 이용약관</string>
    <string name="openlicense">오픈소스라이센스</string>
    <string name="app_version">버전</string>
    <string name="withdraw">탈퇴하기</string>

    <string name="alarm_chat">채팅 알림</string>
    <string name="message">메세지</string>

    <string name="withdraw_text">아쉬워요\n정말로 탈퇴하실건가요?</string>
    <string name="cancle">취소</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting_terms_personal_fragment">SettingTermsPersonalFragment
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>