<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:padding="30dp">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_id"
            android:text="@string/id"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignLeft="@+id/et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_id"
            android:layout_below="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="8dp"
            android:hint="@string/id_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_passwd"
            android:text="@string/passwd"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_below="@+id/et_id"
            android:layout_alignLeft="@+id/et_id"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_passwd"
            android:layout_below="@+id/tv_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="8dp"
            android:hint="@string/passwd_hint"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:layout_below="@+id/et_passwd"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/et_passwd"
            android:layout_alignRight="@+id/et_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/linear_warp"
            android:layout_below="@+id/btn_login"
            android:layout_alignRight="@+id/et_passwd"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/find_user"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="|"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/sign_up"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/linear_warp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:text="K"
                android:layout_width="40dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"/>

            <Button
                android:text="N"
                android:layout_width="40dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>