<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.SingupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_warp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_layout"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_id"
            android:text="@string/id"
            android:fontFamily="@font/gmarketsansttfbold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignLeft="@+id/et_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_id"
            android:layout_below="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/text_layout"
            app:hintTextColor="@color/normal_grey"
            android:hint="@string/id_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_id"
                android:maxLength="50"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_passwd"
            android:text="@string/passwd"
            android:fontFamily="@font/gmarketsansttfbold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignLeft="@+id/et_id"
            android:layout_below="@+id/et_id"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_passwd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_passwd"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:boxStrokeColor="@color/text_layout"
            app:hintTextColor="@color/normal_grey"
            android:hint="@string/passwd_hint"
            app:helperText="@string/singup_passwd_hint"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passwd"
                android:inputType="textPassword"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_passwd_check"
            android:text="@string/passwd_check"
            android:fontFamily="@font/gmarketsansttfbold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignLeft="@+id/et_id"
            android:layout_below="@+id/et_passwd"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_passwd_check"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_passwd_check"
            app:boxStrokeColor="@color/text_layout"
            app:hintTextColor="@color/normal_grey"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_passwd_check"
                android:inputType="textPassword"
                android:hint="@string/passwd_check"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_nicname"
            android:text="@string/nicname"
            android:fontFamily="@font/gmarketsansttfbold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_alignLeft="@+id/et_id"
            android:layout_below="@+id/et_passwd_check"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_nicname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nicname"
            app:boxStrokeColor="@color/text_layout"
            app:hintTextColor="@color/normal_grey"
            android:hint="@string/nicname_hint"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nicname"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_signup"
            android:text="@string/sign_up"
            android:padding="13dp"
            android:fontFamily="@font/gmarketsansttfbold"
            android:layout_alignLeft="@+id/et_nicname"
            android:layout_alignRight="@+id/et_nicname"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</LinearLayout>