<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.WithdrawFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_layout"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="230dp"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:lineSpacingExtra="10dp"
            android:textSize="20sp"
            android:text="@string/withdraw_text"
            android:fontFamily="@font/gmarketsansttfbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/normal_grey"
                android:text="@string/cancle"
                android:fontFamily="@font/gmarketsansttfbold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_withdraw"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/withdraw"
                android:fontFamily="@font/gmarketsansttfbold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>